Fix header z-index issue

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -1774,7 +1774,7 @@ a.big-green-button::after,
 /*	========================================================================== */
 .pageHeader {
   position: relative;
-  z-index: 2;
+  z-index: 3;
   background-color: #fff;
 }
 
@@ -1842,7 +1842,7 @@ a.big-green-button::after,
 /*	========================================================================== */
 .headerLogo {
   position: relative;
-  z-index: 3;
+  z-index: 4;
   background-color: #fff;
   padding: 1em 1em 1em 0;
 }
@@ -1896,7 +1896,7 @@ a.big-green-button::after,
   -webkit-align-items: flex-end;
           align-items: flex-end;
   position: relative;
-  z-index: 3;
+  z-index: 5;
   background-color: #fff;
   padding: 0.375em 0.125em 0.375em 1em;
   transition: background-color ease 0.2s;
