--- a/assets/sass/set-up/_1_variables.scss
+++ b/assets/sass/set-up/_1_variables.scss
@@ -22,9 +22,10 @@ $logo_aspect_ratio: 4.083333333; /* 196 / 48 */
   	VARIABLES : Z-INDICES
     ========================================================================== */
 
-$z-header: 2;
-$z-headerLogo: 3;
-$z-headerNavToggle: 3;
+$z-headerNav: 2;
+$z-header: 3;
+$z-headerLogo: 4;
+$z-headerNavToggle: 5;
 
 /*	========================================================================== 
   	VARIABLES : TYPOGRAPHY
